@@ -70,6 +70,7 @@
 #include "VocBase/LogicalCollection.h"
 #include "VocBase/Methods/Indexes.h"
 #include "VocBase/Methods/Upgrade.h"
+#include "VocBase/Methods/Version.h"
 
 #if USE_ENTERPRISE
 #include "Enterprise/Ldap/LdapFeature.h"
@@ -2581,7 +2582,9 @@ TEST_F(IResearchFeatureTestDBServer, test_upgrade1_link_collectionName) {
       "\"includeAllFields\": true }");
   // assume step 1 already finished
   auto versionJson = arangodb::velocypack::Parser::fromJson(
-      "{ \"version\": 1, \"tasks\": {\"upgradeArangoSearch0_1\":true} }");
+      std::string("{ \"version\": ") + std::to_string(arangodb::methods::Version::current())
+      + ", \"tasks\": {\"upgradeArangoSearch0_1\":true} }");
+
 
   server.getFeature<arangodb::DatabaseFeature>().enableUpgrade();  // skip IResearchView validation
 
@@ -2594,8 +2597,6 @@ TEST_F(IResearchFeatureTestDBServer, test_upgrade1_link_collectionName) {
   StorageEngineMock::versionFilenameResult =
       (irs::utf8_path(dbPathFeature.directory()) /= "version").utf8();
   ASSERT_TRUE(irs::utf8_path(dbPathFeature.directory()).mkdir());
-  ASSERT_TRUE((arangodb::basics::VelocyPackHelper::velocyPackToFile(
-      StorageEngineMock::versionFilenameResult, versionJson->slice(), false)));
 
   auto& engine = *static_cast<StorageEngineMock*>(
       &server.getFeature<arangodb::EngineSelectorFeature>().engine());
@@ -2603,6 +2604,11 @@ TEST_F(IResearchFeatureTestDBServer, test_upgrade1_link_collectionName) {
 
   TRI_vocbase_t* vocbase;
   createTestDatabase(vocbase);
+
+  // rewrite file so upgrade task was not executed
+  ASSERT_TRUE((arangodb::basics::VelocyPackHelper::velocyPackToFile(
+      StorageEngineMock::versionFilenameResult, versionJson->slice(), false)));
+
   auto& clusterInfo =
       vocbase->server().getFeature<arangodb::ClusterFeature>().clusterInfo();
 
